[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/ui/setting_slider.gd" type="Script" id=1]
[ext_resource path="res://new_test.theme" type="Theme" id=2]
[ext_resource path="res://assets/gfx/ui/bgm_icon.png" type="Texture" id=3]

[node name="SettingSlider" type="Control"]
margin_right = 897.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 56 )
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_right = 388.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
custom_constants/margin_right = 10
custom_constants/margin_top = 8
custom_constants/margin_left = 10
custom_constants/margin_bottom = 8

[node name="CheckButton" type="CheckButton" parent="HBoxContainer/MarginContainer"]
margin_left = 10.0
margin_top = 8.0
margin_right = 378.0
margin_bottom = 64.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
pressed = true
enabled_focus_mode = 0
text = "option name test wide"
icon = ExtResource( 3 )
align = 1

[node name="HSlider" type="HSlider" parent="HBoxContainer"]
margin_left = 396.0
margin_right = 897.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 40.0
ticks_on_borders = true

[connection signal="toggled" from="HBoxContainer/MarginContainer/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="value_changed" from="HBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
